[gd_scene load_steps=20 format=3 uid="uid://b788vuq587th7"]

[ext_resource type="Shader" path="res://assets/scenes/troops/troop.gdshader" id="1_0h48l"]
[ext_resource type="Script" path="res://assets/scripts/components/command_component.gd" id="1_numxf"]
[ext_resource type="Script" path="res://assets/scripts/troop_sniper.gd" id="1_ptpsf"]
[ext_resource type="Script" path="res://assets/scripts/components/hitbox_component.gd" id="3_81rlf"]
[ext_resource type="Script" path="res://assets/scripts/components/perception_component.gd" id="3_xsh2q"]
[ext_resource type="Script" path="res://assets/scripts/components/projectile_spawner_component.gd" id="5_u6pe2"]
[ext_resource type="Texture2D" uid="uid://1m3x0qqnjse2" path="res://assets/images/sniper.png" id="6_nekcq"]
[ext_resource type="AudioStream" uid="uid://dg6w5iowiwcit" path="res://assets/audio/som-sniper.wav" id="7_2qwrv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eqfwo"]
shader = ExtResource("1_0h48l")
shader_parameter/outline_color = Vector4(0, 0, 1, 1)
shader_parameter/outline_thickness = 3.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bvj7i"]
radius = 32.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f047g"]
radius = 32.0
height = 92.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ni87"]
radius = 415.005

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0njk3"]
shader = ExtResource("1_0h48l")
shader_parameter/outline_color = Vector4(0, 0, 1, 1)
shader_parameter/outline_thickness = 3.0

[sub_resource type="Animation" id="Animation_2tt7m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6rndy"]
resource_name = "shoot"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bpl8o"]
_data = {
"RESET": SubResource("Animation_2tt7m"),
"shoot": SubResource("Animation_6rndy")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qko50"]
bg_color = Color(0.0687983, 0.0687983, 0.0687982, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jna3"]
bg_color = Color(0.50607, 0.662389, 0.233275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_io2sr"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_qko50")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_3jna3")

[node name="TroopSniper" type="CharacterBody2D" groups=["player_troops"]]
material = SubResource("ShaderMaterial_eqfwo")
script = ExtResource("1_ptpsf")
shoot_sfx = ExtResource("7_2qwrv")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -64.0
offset_top = -32.0
offset_right = 64.0
offset_bottom = -9.0
text = "sniper eheh"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 0)
shape = SubResource("CapsuleShape2D_bvj7i")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(0.606145, 0.387846, 0.953258, 1)
polygon = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)

[node name="CommandComponent" type="Node" parent="."]
script = ExtResource("1_numxf")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 2
monitoring = false
script = ExtResource("3_81rlf")
max_hp = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(18, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f047g")

[node name="PerceptionComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("3_xsh2q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionComponent"]
shape = SubResource("CircleShape2D_4ni87")
debug_color = Color(0, 0.6, 0.701961, 0.498039)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0njk3")
rotation = -6.28319
texture = ExtResource("6_nekcq")
offset = Vector2(50, 0)
hframes = 5

[node name="ProjectileSpawnerComponent" type="Node2D" parent="Sprite2D"]
position = Vector2(88, 14)
script = ExtResource("5_u6pe2")
fire_delay = 2.0
multishot = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bpl8o")
}

[node name="shoot_sfx" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_2qwrv")
volume_db = 24.0
bus = &"SFX"

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="hp_bar" type="ProgressBar" parent="."]
offset_left = -22.0
offset_top = -56.0
offset_right = 42.0
offset_bottom = -44.0
theme = SubResource("Theme_io2sr")
max_value = 1000.0
step = 1.0
value = 500.0
show_percentage = false
